# spandrel

./: README.md  example_esrgan_compile.py  example_esrgan_cudagraph.py  pyproject.toml  test_cuda_compat.py
libs/spandrel/: MANIFEST.in  pyproject.toml  setup.py
libs/spandrel/spandrel/: __init__.py
libs/spandrel/spandrel/__helpers/: cuda_compat.py  loader.py  model_descriptor.py
libs/spandrel/spandrel/architectures/DAT/__arch/: DAT.py  DAT_optim.py  README_FlexAttention.md  _import_helper.py  benchmark_flexattention.py  benchmark_torch_compile.py  benchmark_torch_compile_fp16.py  example_usage_optimized.py  inspect_with_spandrel.py  test_adaptive_spatial_debug.py  test_channel_attention_debug.py  test_channel_minimal.py  test_dat_flexattention.py  test_final_validation.py  test_flexattention_output.py  test_loaded_model.py  test_numerical_equivalence.py  test_v_computation.py  vectorized_ops.py  verify_gpu_usage.py
libs/spandrel/spandrel/architectures/__arch_helpers/: dysample.py
libs/spandrel_extra_arches/: MANIFEST.in  pyproject.toml  setup.py
