[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spandrel"
description = "Give your project support for a variety of PyTorch model architectures, including auto-detecting model architecture from just .pth files."
authors = [{name = "chaiNNer team"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dynamic = ["version"]
keywords = [
    "spandrel",
    "pytorch",
    "super-resolution",
    "restoration",
    "image-processing",
    "model-loader",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "torchvision",
    "safetensors",
    "numpy",
    "einops",
    "typing_extensions",
]

[project.urls]
"Homepage" = "https://github.com/chaiNNer-org/spandrel"
"Source" = "https://github.com/chaiNNer-org/spandrel"
"Bug Tracker" = "https://github.com/chaiNNer-org/spandrel/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["spandrel*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "spandrel.__version__"}